# caption_manager

./: CMakeLists.txt  README.md
config/: config.xml
src/: CaptionManager.cpp  CaptionManager.h  FilterDialog.cpp  FilterDialog.h  ImageDelegate.cpp  ImageDelegate.h  TagEditorDialog.cpp  TagEditorDialog.h  caption_manager.cpp  caption_manager.h  caption_manager.qrc  caption_manager.ui  database_manager.cpp  database_manager.h  main.cpp
